<resources>
    <string name="app_name">Tagebuch</string>
    <string name="titulo_reportar_pensamiento">REPORTAR PENSAMIENTO</string>
    <string name="button_reportar_pensamiento">Reportar pensamiento</string>
    <string name="text_view_titulo">Titulo</string>
    <string name="text_view_descripcion">Descripción</string>
    <string name="text_view_categoria">Categoría</string>
    <string name="edit_text_titulo">Titulo del pensamiento</string>
    <string name="edit_text_descripcion">Descripción del pensamiento</string>
    <string name="button_reportar">Reportar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="text_view_fecha">Fecha</string>
    <string name="button_eliminar">Eliminar</string>
    <string name="button_editar">Editar</string>
    <string name="text_view_contenido_detalle">Contenido detalle</string>
    <string name="text_view_titulo_detalle">Titulo detalle</string>
    <string name="button_atras">Atras</string>
    <string name="titulo_detalle_pensamiento">DETALLE DE PENSAMIENTO</string>
    <string name="titulo_editar_pensamiento">EDITAR PENSAMIENTO</string>
    <string name="deshacer">Deshacer</string>
    <string name="rehacer">Rehacer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>