<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragmentos.item_pensamiento">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/boton_marco_item_pensamiento"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:backgroundTint="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titulo_item_pensamiento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:elevation="10dp"
            android:ellipsize="end"
            android:lines="1"
            android:scrollHorizontally="true"
            android:text="@string/edit_text_titulo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintStart_toStartOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintTop_toTopOf="@+id/boton_marco_item_pensamiento" />

        <TextView
            android:id="@+id/fecha_item_pensamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            android:text="@string/text_view_fecha"
            app:layout_constraintBottom_toBottomOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintEnd_toEndOf="@+id/boton_marco_item_pensamiento" />

        <TextView
            android:id="@+id/categoria_item_pensamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="16dp"
            android:elevation="10dp"
            android:text="@string/text_view_categoria"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintStart_toStartOf="@+id/boton_marco_item_pensamiento" />

        <TextView
            android:id="@+id/descripcion_item_pensamiento"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_view_descripcion"
            android:elevation="10dp"
            android:ellipsize="end"
            android:lines="3"
            android:scrollHorizontally="true"
            app:layout_constraintBottom_toTopOf="@+id/categoria_item_pensamiento"
            app:layout_constraintEnd_toEndOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintStart_toStartOf="@+id/boton_marco_item_pensamiento"
            app:layout_constraintTop_toBottomOf="@+id/titulo_item_pensamiento" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>